Fix username display on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,7 @@ header {
 	float: left;
 	padding: 1%;
 	text-align: right;
+	height: 100%;
 }
 
 h1 {
@@ -216,6 +217,7 @@ input[type="submit"]:hover {
 	padding-top: 7px;
 	text-align: left;
 	padding-left: 5px;
+	vertical-align: top;
 }
 
 /* Landscape smartphone */
@@ -232,6 +234,7 @@ input[type="submit"]:hover {
 
 	#usernameDisplay {
 		font-size: 1em;
+		padding-top: 5px;
 	}
 }
 
